resolved skills percentage overlap issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3236,7 +3236,7 @@ input, select, textarea {
       margin-top: 0px;
     }
     .skill-bars .bar .info{
-      margin-bottom: 5px;
+      margin-bottom: 25px;
     }
     .skill-bars .bar .info span{
       font-weight: 500;
